infrastructure/kubernetes/apps/cards-service/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: cards-service

spec:
  selector:
    app: cards-service

  ports:
    - name: http
      port: 3000
      targetPort: 3000

  type: ClusterIP
